# gUAcS

./: .gitignore  Cargo.toml  README.md  makefile  package-lock.json  py_env_req.txt  py_reqs.txt  pyproject.toml  theory.tex
configs/: run_config.json
docs/: references.bib  reflect_diagram.tikz.tex  theory.tex
examples/: example_notebook.html  example_notebook.md  example_notebook.qmd  examples.ipynb  examples.qmd  func_driver.py  guacs.pyi  python_utils.py
examples/.ipynb_checkpoints/: example_test.sync-checkpoint.ipynb
examples/test_files/libs/bootstrap/: bootstrap-f6339182892c030344c092dfb7c07327.min.css
src/: beam_tracing.rs  driver.py  interface.rs  lib.rs  main.rs  make_config.py  math_util.rs  path_tracing.rs  plot_raypaths.py  python_interface_tools.py
