[package]
name = "guacs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "guacs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
rayon = "1.10.0"
csv = "1.3.1"
uuid = { version = "1.11.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
glob = "0.3.1"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
num = "0.4.3"
