[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "guacs"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "PyQt5",
  "jupyter_client",
  "pynvim",
  "pnglatex",
  "pyyaml",
  "ipykernel",
  "maturin",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
[tool.pyright]
venv = ".venv"
venvPath = "."
include = ["examples/*.py"]
[tool.ruff]
include = ["pyproject.toml", "examples/*.py"]
